fix gap in media queries and use margin shorhand

--- a/main.css
+++ b/main.css
@@ -165,7 +165,7 @@ h2 {
 
   .navbar-toggle {
     position: absolute;
-    top: 6px;
+    top: 10;
     left: 20px;
     color: white;
     font-size: 25px;
@@ -185,6 +185,13 @@ h2 {
 
   a.gitlinks:visited {
     color: #7c7c7c;
+  }
+
+  /* Landscape */
+  @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
+    main {
+      padding: 60px 80px;
+    }
   }
 
   /*------------------------------------------------*/
@@ -214,10 +221,9 @@ h2 {
 /* -------- iPad --------- */
 
 /* Portrait */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1224px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
   main {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: 0px 100px;
   }
 
   .navbar-toggle {
@@ -269,7 +275,7 @@ h2 {
 }
 
 /* Landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1224px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
   .navbar-toggle {
     display: none;
   }
@@ -295,7 +301,7 @@ h2 {
     color: rgb(141, 131, 131);
   }
   main {
-    margin: 20px 80px 60px 80px;
+    margin: 30px 150px 100px;
   }
   .desktop-display {
     display: flex;
